--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 	  </select>
 	  <label for="amount">Amount:</label>
 	  <input type="number" id="amount" name="amount" placeholder="e.g: 500" required>
-	  <button type="button" class="btn btn-default btn-lg">Add Expense</button>
-	  <button type="button" class="btn btn-default btn-lg">Cancel Edit</button>
+	  <button type="button" id="add-expense" class="btn btn-default btn-lg">Add Expense</button>
+	  <button type="button" id="cancel-edit" class="btn btn-default btn-lg">Cancel Edit</button>
 	</form>
       </section>
       <section id="expenses">
 
         <div>
-	  <h2>Total Expenses: $<span id="total-expenses">0</span></h2>
+	  <h2>Total Expenses: $<span id="total-expenses">200</span></h2>
 	</div>
 
         <div class="table-responsive">
@@ -66,7 +66,7 @@
                 <th>Action</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="expenses-table">
               <tr>
 		<td>2/12/2024</td>
                 <td>Breakfast</td>
@@ -95,3 +95,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
+
+  </body>
+</html>
